// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Profiles /> renders the <Profiles /> with populated data 1`] = `
<div
  class="profiles__Container-vqj77m-0 nFwaM"
>
  <h1
    class="profiles__Title-vqj77m-1 kzRYEQ"
  >
    Who's watching?
  </h1>
  <ul
    class="profiles__List-vqj77m-2 bGLWJb"
  >
    <li
      class="profiles__Item-vqj77m-5 kicIsl"
    >
      <img
        class="profiles__Picture-vqj77m-4 ccuPqo"
        data-testid="profile-picture"
        src="/images/users//images/karl.png.png"
      />
      <p
        class="profiles__Name-vqj77m-3 hmbjAL"
      >
        Karl
      </p>
    </li>
  </ul>
</div>
`;

exports[`<Profiles /> renders the <Profiles /> with populated data but misc profile image 1`] = `
<div
  class="profiles__Container-vqj77m-0 nFwaM"
>
  <h1
    class="profiles__Title-vqj77m-1 kzRYEQ"
  >
    Who's watching?
  </h1>
  <ul
    class="profiles__List-vqj77m-2 bGLWJb"
  >
    <li
      class="profiles__Item-vqj77m-5 kicIsl"
    >
      <img
        class="profiles__Picture-vqj77m-4 ccuPqo"
        data-testid="profile-picture-misc"
        src="/images/misc/loading.gif"
      />
      <p
        class="profiles__Name-vqj77m-3 hmbjAL"
      >
        Karl
      </p>
    </li>
  </ul>
</div>
`;
